update swagger query users
